<resources>
    <string name="app_name">Digital House Foods</string>

    <string name="til_username">Nome do usuário</string>
    <string name="til_password">Senha</string>
    <string name="btn_login">Log in</string>
    <string name="tv_info">OR</string>
    <string name="btn_register">Register</string>
    <string name="title_activity_register_activity">Cadastrar</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_repeatpassword">Confirmar senha</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="restaurant1">"Tony Roma's"</string>
    <string name="restaurant2">"Aoyama - Moema"</string>
    <string name="restaurant3">"Outback - Moema"</string>
    <string name="restaurant4">"Sí Señor!"</string>
    <string name="endereco1">"Av. Lavandisca, 717 - Indianápolis, São Paulo"</string>
    <string name="endereco2">"Alameda dos Arapanés, 532 - Moema, São Paulo"</string>
    <string name="endereco3">"Av. Moaci, 187 - Moema, São Paulo"</string>
    <string name="endereco4">"Alameda Jauaperi, 626 - Moema, São Paulo"</string>
    <string name="horario1">"Fecha às 22:00"</string>
    <string name="horario2">"Fecha às 00:00"</string>
    <string name="horario3">"Fecha às 00:00"</string>
    <string name="horario4">"Fecha às 01:00"</string>
    <string name="imagem_restaurante">Imagem Restaurante</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="descricao">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="receita">Salada com molho Gengibre</string>

</resources>