<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/til_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            tools:ignore="MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/til_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:theme="@style/ButtonText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCadastrar"
            android:layout_marginTop="50dp"
            android:layout_marginRight="23dp"
            android:layout_marginLeft="23dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:width="25dp"
            android:height="20dp"
            android:text="@string/tv_info"
            android:theme="@style/DetailText"
            app:drawableStartCompat="@drawable/login_detail"
            app:drawableEndCompat="@drawable/login_detail" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/register_button"
            android:text="@string/btn_register"
            android:theme="@style/ButtonText" />

    </LinearLayout>


</LinearLayout>